--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,44 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+     Asset Health
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-list>
+    <ion-item color="dark">
+      <ion-label>Ttoal Vechicles Online &nbsp;&nbsp;
+        <!-- <ion-button>1</ion-button> -->
+      </ion-label>
+    </ion-item>
+    <ion-item color="medium" >
+      <ion-label>Total Vehicles Offline &nbsp;&nbsp;&nbsp;</ion-label>
+    </ion-item>
+    <ion-item color="dark">
+      <ion-label>Service Tickets Open</ion-label>
+    </ion-item >
+    <ion-item color="medium">
+      <ion-label>Avg Maintanence Speed</ion-label>
+    </ion-item>
+    <ion-item color="dark">
+      <ion-label>Avg Maintanence Time</ion-label>
+    </ion-item>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+    <ion-item color="medium">
+      <ion-label>Cost per mile</ion-label>
+    </ion-item>
+    <ion-item color="dark">
+      <ion-label>Maintanence Type</ion-label>
+    </ion-item>
+    <ion-item color="medium">
+      <ion-label>Average Battery Span</ion-label>
+    </ion-item>
+    <ion-item color="dark">
+      <ion-label>Avg Availability</ion-label>
+    </ion-item>
+  </ion-list>
+
+
 </ion-content>
