--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,19 +2,25 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <ion-icon name="list-circle-sharp"></ion-icon>
+      <ion-label>Live Telemetry</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="images"></ion-icon>
-      <ion-label>Photos</ion-label>
+      <ion-icon name="information-circle-sharp"></ion-icon>
+      <ion-label>Advanced Analytics</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Gallery</ion-label>
+      <ion-icon name="heart-sharp"></ion-icon>
+      <ion-label>Asset Health</ion-label>
     </ion-tab-button>
-  </ion-tab-bar>
+
+
+  <ion-tab-button tab="tab4">
+    <ion-icon name="analytics-sharp"></ion-icon>
+    <ion-label>Predictions</ion-label>
+  </ion-tab-button>
+</ion-tab-bar>
 
 </ion-tabs>
