--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,12 +1,20 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="medium">
     <ion-title>
-      <ion-chip color="dark">
-        <ion-avatar>
+
+      <ion-label  class='ey-logo' size="large"   >EY</ion-label>
+      <!-- <ion-chip color="dark" class='right-align'>
+
+       <ion-avatar class="right-align" >
           <img src="https://ionicframework.com/docs/img/demos/avatar.svg" />
         </ion-avatar>
-        <ion-label>LAND EV</ion-label>
-      </ion-chip>
+        <ion-content size="large"  >LAND EV</ion-content>
+
+      </ion-chip> -->
+      <ion-label  class="right-align" size="large"   >LAND EV</ion-label>
+
+
+
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -20,7 +28,7 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-card color="warning">
+        <ion-card color="medium">
           <ion-card-header>
             <ion-card-title >Odometer</ion-card-title>
             <ion-card-subtitle>6878 KM</ion-card-subtitle>
@@ -30,7 +38,7 @@
         </ion-card>
       </ion-col>
       <ion-col>
-        <ion-card color="warning">
+        <ion-card color="medium">
           <ion-card-header>
             <ion-card-title >RPM</ion-card-title>
             <ion-card-subtitle>720 KM</ion-card-subtitle>
@@ -42,7 +50,7 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-card color="warning">
+        <ion-card color="medium">
           <ion-card-header>
             <ion-card-title >Battery Temperature</ion-card-title>
             <ion-card-subtitle>25 C</ion-card-subtitle>
@@ -52,7 +60,7 @@
         </ion-card>
       </ion-col>
       <ion-col>
-        <ion-card color="warning">
+        <ion-card color="medium">
           <ion-card-header>
             <ion-card-title >Motor Temperature</ion-card-title>
             <ion-card-subtitle>6878 KM</ion-card-subtitle>
@@ -62,7 +70,7 @@
         </ion-card>
       </ion-col>
     </ion-row>
-    <ion-row>
+    <!-- <ion-row>
       <ion-col>
         <ion-card color="warning">
           <ion-card-header>
@@ -87,7 +95,7 @@
           <ion-button >Know More</ion-button>
         </ion-card>
       </ion-col>
-    </ion-row>
+    </ion-row> -->
 
   </ion-grid>
 
