--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="medium" >
     <ion-title>
       Prediction with Advanced Analytics
     </ion-title>
@@ -20,15 +20,15 @@
         <canvas #doughnutCanvas></canvas>
       </ion-card-content>
     </ion-card>
-    <ion-card>
+    <!-- <ion-card>
       <ion-card-header> Line Chart </ion-card-header>
       <ion-card-content>
         <canvas #lineCanvas></canvas>
       </ion-card-content>
-    </ion-card>
+    </ion-card> -->
   </div>
 
-  
+
 
 
 </ion-content>
