--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,16 +1,16 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="medium" >
     <ion-title>
-     Asset Health
+     Remote Operations Cockpit
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-list>
+  <!-- <ion-list>
     <ion-item color="dark">
-      <ion-label>Ttoal Vechicles Online &nbsp;&nbsp;
-        <!-- <ion-button>1</ion-button> -->
+      <ion-label>Total Vechicles Online &nbsp;&nbsp;
+        <ion-button>1</ion-button>
       </ion-label>
     </ion-item>
     <ion-item color="medium" >
@@ -38,7 +38,7 @@
     <ion-item color="dark">
       <ion-label>Avg Availability</ion-label>
     </ion-item>
-  </ion-list>
+  </ion-list> -->
 
 
 </ion-content>
