--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -7,20 +7,20 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="information-circle-sharp"></ion-icon>
+      <ion-icon name="podium"></ion-icon>
       <ion-label>Advanced Analytics</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="heart-sharp"></ion-icon>
-      <ion-label>Asset Health</ion-label>
+      <ion-icon name="information-circle"></ion-icon>
+      <ion-label>Service Tickets</ion-label>
     </ion-tab-button>
 
 
-  <ion-tab-button tab="tab4">
+  <!-- <ion-tab-button tab="tab4">
     <ion-icon name="analytics-sharp"></ion-icon>
     <ion-label>Predictions</ion-label>
-  </ion-tab-button>
+  </ion-tab-button> -->
 </ion-tab-bar>
 
 </ion-tabs>
