--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -1,6 +1,6 @@
 .table{
-  //background-color: #909090;
-  margin-top: 20px;
+  background-color: rgb(59, 56, 56);
+
 
 }
 .grey{
@@ -10,8 +10,18 @@
   text-align: center;
   font-size: x-large;
   font-weight: bolder;
-  margin-top: 20px;
+ // margin-top: 20px;
 }
+.flex-container {
+  display: flex;
+  width: 100%;
+}
+.right-align{
+  justify-content: right;
+  display: flex;
+
+}
+
 
 .ticket{
   color: yellow;
@@ -19,9 +29,24 @@
 .heading{
   font-size: larger;
   font-weight: bolder;
-  background-color: black;
+  text-align: center;
+  //background-color: black;
 
 }
+
 .light-grey{
- background-color:  black;
+  font-size: smaller;
+}
+.title{
+  color: red;
+  text-align: center;
+}
+.box{
+  max-height: 100%;
+  margin: 0;
+}
+.parent{
+  display: flex;
+  justify-content:space-around ;
+  //max-width: 100%;
 }
